# schoolERPCode

./: .gitignore  API.md  Database.md  README.md  dump.txt  package-lock.json  package.json  requirements.txt
backend/: .env  .gitignore  README.md  gen_dummy_data.py  import_dummy_data.py  manage.py  pyproject.toml  reset_db.sh
backend/accounts/: accounts_desc.md  admin.py  authentication.py  backends.py  models.py  permission.py  permissions.py  serializers.py  urls.py  views.py
backend/allocation/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/announcements/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/assessments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/assignments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/attachments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/attendance/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/events/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/finances/: admin.py  models.py  serializers.py  urls.py  views.py
backend/reports/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/schoolERPCode/: asgi.py  pagination.py  settings.py  setup_tests.py  urls.py  viewsets.py  wsgi.py
backend/tenants/: admin.py  models.py
backend/timetable/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/: admin.py  backends.py  models.py  tests.py  (+5 more)
(+272 files in other folders)
