[project]
name = "backend"
version = "0.1.0"
description = "backend for schoolERP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "django>=5.1.5",
    "django-cors-headers>=4.6.0",
    "django-extensions>=3.2.3",
    "django-import-export>=4.3.4",
    "django-stubs>=5.1.2",
    "django-tenants>=3.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "psycopg2>=2.9.10",
    "razorpay>=1.4.2",
    "setuptools>=75.8.0",
]
